  * libtorrent: tighten up validation of dont-have messages
  * libtorrent: tighten up validation of reject messages, to ensure consistency of stats counters
  * libtorrent: tighten up message size checks
  * libtorrent: update symlinks to conform to BEP 47
  * libtorrent: source code cleanup, performance and stability

 -- FrostWire Team <contact@frostwire.com>  Tue, 14 May 2019 22:10:36 -0600


frostwire (6.7.9) stable; urgency=high
  * Debian/Ubuntu is now Java 10+ ready. Min. JRE bumped to openjdk-11-jre
  * Limetorrent search results now have a distinct icon, thanks trollmad3
  * Archive.org https search

 -- FrostWire Team <contact@frostwire.com>  Wed, 10 Apr 2019 17:46:48 -0600

frostwire (6.7.8) stable; urgency=high
  * New jlibtorrent 1.2.0.20 with latest libtorrent release
  * Updated okhttp3 3.12.0 -> 3.14.0
  * Updated com.h2database 1.4.197 -> 1.4.199
  * Removed lucene-core dependency
  * Library code cleanup
  * Library playlist search update
  * Fixes issue detecting the new version of PIA VPN in Windows

 -- FrostWire Team <contact@frostwire.com>  Fri, 22 Mar 2019 21:57:25 -0600

frostwire (6.7.7) stable; urgency=high
  * New jlibtorrent 1.2.0.19 with latest libtorrent release
  * Updated okhttp3 3.11.0 to 3.12.0
  * Updated com.h2database 1.4.193 to 1.4.197

 -- FrostWire Team <contact@frostwire.com>  Tue, 15 Jan 2019 10:57:17 -0600

frostwire (6.7.6) stable; urgency=high
  * Search: New Nyaa search
  * Performance upgrades and fixes

 -- FrostWire Team <contact@frostwire.com>  Wed, 12 Dec 2018 07:06:45 -0600

frostwire (6.7.5) stable; urgency=high
  * Translation updates: Swedish
  * EZ search fixed
  * Cleanup and optimizations
  * com.google.code.gson:gson 2.8.4 -> 2.8.5 update

 -- FrostWire Team <contact@frostwire.com>  Mon, 26 Nov 2018 09:02:32 -0600

frostwire (6.7.4) stable; urgency=high
  * New jlibtorrent 1.2.0.18
  * Translation updates: Croatian
  * YT search removed
