@@ -1,16 +1,17 @@
 /*
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
+ * Copyright (c) 2011-2019, FrostWire(R). All rights reserved.
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.limegroup.gnutella.gui.search;
@@ -23,11 +24,9 @@ import com.frostwire.gui.filters.SearchFilterFactoryImpl;
 import com.frostwire.gui.tabs.TransfersTab;
 import com.frostwire.search.*;
 import com.frostwire.search.archiveorg.ArchiveorgCrawledSearchResult;
-import com.frostwire.search.pixabay.PixabayItemSearchResult;
 import com.frostwire.search.soundcloud.SoundcloudSearchResult;
 import com.frostwire.search.torrent.TorrentSearchResult;
 import com.frostwire.util.Logger;
-import com.limegroup.gnutella.MediaType;
 import com.limegroup.gnutella.gui.ApplicationHeader;
 import com.limegroup.gnutella.gui.GUIMediator;
 import com.limegroup.gnutella.gui.I18n;
@@ -85,8 +84,6 @@ public final class SearchMediator {
     static final String SOUNDCLOUD_DETAILS_STRING = I18n.tr("View in Soundcloud");
 
     static final String ARCHIVEORG_DETAILS_STRING = I18n.tr("View in Archive.org");
-
-    static final String PIXABAY_DETAILS_STRING = I18n.tr("View in Pixabay");
 
     static final String CLOSE_TAB_STRING = I18n.tr("Close Tab");
 
@@ -204,12 +201,9 @@ public final class SearchMediator {
         if (!validate(info)) {
             return 0;
         }
-
         long token = newSearchToken();
-        SearchResultMediator resultTab = addResultTab(token, info);
-
+        addResultTab(token, info);
         performSearch(token, info.getQuery());
-
         return token;
     }
 
@@ -231,8 +225,6 @@ public final class SearchMediator {
             case QUERY_TOO_LONG:
                 GUIMediator.showMessage(I18n.tr("Your search is too long. Please make your search smaller and try again."));
                 return false;
-            case QUERY_VALID:
-                return true;
             default:
                 return true;
         }
@@ -394,8 +386,6 @@ public final class SearchMediator {
                 ui = new TorrentUISearchResult((TorrentSearchResult) sr, engine, query);
             } else if (sr instanceof ArchiveorgCrawledSearchResult) {
                 ui = new ArchiveorgUISearchResult((ArchiveorgCrawledSearchResult) sr, engine, query);
-            } else if (sr instanceof PixabayItemSearchResult) {
-                ui = new PixabayUISearchResult((PixabayItemSearchResult) sr, engine, query);
             }
 
             if (ui != null) {
@@ -410,9 +400,9 @@ public final class SearchMediator {
      * Adds a single result tab for the specified GUID, type,
      * standard query string, and XML query string.
      */
-    private static SearchResultMediator addResultTab(long token, SearchInformation info) {
+    private static void addResultTab(long token, SearchInformation info) {
         List<String> searchTokens = instance().tokenize(info.getQuery());
-        return getSearchResultDisplayer().addResultTab(token, searchTokens, info);
+        getSearchResultDisplayer().addResultTab(token, searchTokens, info);
     }
 
     /**
@@ -452,8 +442,8 @@ public final class SearchMediator {
         }
 
         if (lines.length == 1) {
-            SearchResultDataLine srdl = lines[0];
-            String hash = srdl.getHash();
+            SearchResultDataLine srDataline = lines[0];
+            String hash = srDataline.getHash();
             BTDownloadMediator btDownloadMediator = GUIMediator.instance().getBTDownloadMediator();
             List<BTDownload> downloads =
                     btDownloadMediator.getDownloads();
