@@ -17,8 +17,9 @@ frostwire (6.8.0) stable; urgency=high
   * libtorrent: tighten up message size checks
   * libtorrent: update symlinks to conform to BEP 47
   * libtorrent: source code cleanup, performance and stability
+  * Pixabay search removed
 
- -- FrostWire Team <contact@frostwire.com>  Tue, 14 May 2019 22:10:36 -0600
+ -- FrostWire Team <contact@frostwire.com>  Wed, 22 May 2019 22:52:40 -0600
 
 
 frostwire (6.7.9) stable; urgency=high
